--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+keywords: 
+lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: apc.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://andreapcatalisan.github.io # the base hostname & protocol for your site
