--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ contact_note: >
   
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-footer_text: > jjj
+footer_text: > 
 keywords: 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: apc.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
