--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
-locale                   : "en-US"
-name                     : &name "Andrea Pop-Catalisan"
-author:
-  name             : "Andrea Pop-Catalisan"
+
   
-title:  Andrea Pop-Catalisan 
+title:  blank #
 first_name:  Andrea Pop-Catalisan
 middle_name: 
 last_name:
+email: andrea.pop@psemail.eu
 contact_note: >
   
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
@@ -17,7 +15,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: > 
 keywords: 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: apc.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: apc.png
 
 url: https://andreacatalisan.github.io # the base hostname & protocol for your site
 baseurl: 
@@ -55,7 +53,7 @@ posts_in_search: false
 bib_search: false
 
 # Dimensions
-max_width: 930px
+max_width: 850px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -86,6 +84,9 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
+cv: include
+twitter_username: andreacatalisan
+linkedin_username: andreapop
 
 blog_name: al-folio # blog_name will be displayed in your blog page
 blog_description: a simple whitespace theme for academics
