--- a/_config.yml
+++ b/_config.yml
@@ -48,12 +48,12 @@ repo_trophies:
 navbar_fixed: true
 footer_fixed: true
 search_enabled: false
-socials_in_search: false
+socials_in_search: true
 posts_in_search: false
 bib_search: false
 
 # Dimensions
-max_width: 850px
+max_width: 1000px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -265,8 +265,9 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+
+  last_name: Pop-Catalisan
+  first_name: Andrea
 
   style: apa
   locale: en
