--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: > 
 keywords: 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: apc.png
+icon: apc1.png
 
 url: https://andreacatalisan.github.io # the base hostname & protocol for your site
 baseurl: 
