--- a/_config.yml
+++ b/_config.yml
@@ -167,7 +167,7 @@ kramdown:
       start_line: 1
 
 # Includes & excludes
-include: ['_pages/about.md' , '_pages/research.md' , '_pages/teaching.md', '_pages/cv.md' ]
+include: ['_pages/about.md' , '_pages/research.md' , '_pages']
 exclude:
   - bin/
   - CONTRIBUTING.md
