--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
+title: Andrea Pop-Catalisan
+author:
+  name: Andrea Pop-Catalisan
 
-  
-title:  blank #
 first_name:  Andrea Pop-Catalisan
 middle_name: 
 last_name:
