--- a/_config.yml
+++ b/_config.yml
@@ -169,7 +169,7 @@ kramdown:
       start_line: 1
 
 # Includes & excludes
-include: ['_pages']
+include: ["_pages", "_scripts"]
 exclude:
   - bin/
   - CONTRIBUTING.md
