--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name:
 email: andrea.pop@psemail.eu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Portfolio webpage of Andrea Pop-Catalisan.
+  Portfolio webpage of Andrea Pop-Catalisan
 footer_text: >
 keywords: Andrea Pop-Catalisan, andreapopcatalisan # add your own keywords or leave empty
 
@@ -154,8 +154,6 @@ collections:
 
 
 
-  
-# Markdown and syntax highlight
 markdown: kramdown
 highlighter: rouge
 kramdown:
@@ -263,8 +261,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 
 scholar:
 
-  last_name: [Pop-Catalisan]
-  first_name: [Andrea]
+  last_name: Pop-Catalisan
+  first_name: Andrea
 
   style: apa
   locale: en
